Fixed issue with NULL reference on pets and added View Models for display

--- a/PetApplication.Core/PetApplication.Core.csproj
+++ b/PetApplication.Core/PetApplication.Core.csproj
@@ -54,11 +54,13 @@
     <Compile Include="BLL\PetService.cs" />
     <Compile Include="Common\Constants\Gender.cs" />
     <Compile Include="Common\Constants\PetType.cs" />
+    <Compile Include="Common\Extensions\ModelExtensions.cs" />
     <Compile Include="Common\Helpers\BaseHttpClient.cs" />
     <Compile Include="Common\Services\BaseService.cs" />
-    <Compile Include="Models\Person.cs" />
-    <Compile Include="Models\Pet.cs" />
+    <Compile Include="Models\Entities\Person.cs" />
+    <Compile Include="Models\Entities\Pet.cs" />
     <Compile Include="Common\Constants\Setting.cs" />
+    <Compile Include="Models\ViewModels\PetsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
