--- a/PetApplication/PetApplication.csproj
+++ b/PetApplication/PetApplication.csproj
@@ -53,8 +53,9 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="PetApplication.Core">
-      <HintPath>..\PetApplication.Core\bin\Debug\PetApplication.Core.dll</HintPath>
+    <Reference Include="PetApplication.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\PetApplication.Core\obj\Debug\PetApplication.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
