--- a/PetApplication/Web.config
+++ b/PetApplication/Web.config
@@ -9,6 +9,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
+    <add key="BASE_API" value="http://agl-developer-test.azurewebsites.net/" />
+    <add key="PEOPLE_API" value="people.json"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
