--- a/PetApplication.Core/App.config
+++ b/PetApplication.Core/App.config
@@ -3,5 +3,6 @@
   <appSettings>
     <add key="BASE_API" value="http://agl-developer-test.azurewebsites.net/" />
     <add key="PEOPLE_API" value="people.json"/>
+    <add key="DEFAULT_MEDIA_TYPE" value="application/json"/>
   </appSettings>
 </configuration>
