Added Test Project and fixed issue with getting the list of male person object

--- a/PetApplication.Test/PetApplication.Test.csproj
+++ b/PetApplication.Test/PetApplication.Test.csproj
@@ -71,11 +71,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PetFetchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PetApplication.Core\PetApplication.Core.csproj">
+      <Project>{f3074738-2cca-4d80-998c-3041518f9d85}</Project>
+      <Name>PetApplication.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
