--- a/PetApplication/Web.config
+++ b/PetApplication/Web.config
@@ -12,6 +12,7 @@
     
     <add key="BASE_API" value="http://agl-developer-test.azurewebsites.net/" />
     <add key="PEOPLE_API" value="people.json"/>
+    <add key="DEFAULT_MEDIA_TYPE" value="application/json"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
