--- a/PetApplication.Tests/app.config
+++ b/PetApplication.Tests/app.config
@@ -8,4 +8,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="BASE_API" value="http://agl-developer-test.azurewebsites.net/" />
+    <add key="PEOPLE_API" value="people.json"/>
+    <add key="DEFAULT_MEDIA_TYPE" value="application/json"/>
+  </appSettings>
 </configuration>
